--- a/Login_v1/public/index.html
+++ b/Login_v1/public/index.html
@@ -105,6 +105,21 @@
 			const email = document.getElementById('email').value;
 			const password = document.getElementById('password').value;
 
+			// if (!email || !password) {
+			// 	alert('Both email and password are required.');
+			// 	return;
+			// }
+
+			// const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+			// if (!emailPattern.test(email)) {
+			// 	alert('Please enter a valid email address.');
+			// 	return;
+			// }
+			// if (password.length < 6) {
+			// 	alert('Password must be at least 6 characters long.');
+			// 	return;
+			// }
+
 			const response = await fetch('', {
 				method: 'POST',
 				headers: {
