--- a/Login_v1/public/register.html
+++ b/Login_v1/public/register.html
@@ -87,13 +87,30 @@
 			scale: 1.1
 		})
 	</script>
+	<script src="./js/main.js"></script>
 	<!--===============================================================================================-->
 	<script>
 		document.getElementById('registerForm').addEventListener('submit', async (e) => {
 			e.preventDefault();
 
 			const email = document.getElementById('email').value;
-			const password = document.getElementById('password').value;                                                             
+			const password = document.getElementById('password').value;
+			if (!email || !password) {
+				alert('Both email and password are required.');
+				return;
+			}
+
+			const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+			if (!emailPattern.test(email)) {
+				alert('Please enter a valid email address.');
+				return;
+			}
+
+			
+			if (password.length < 6) {
+				alert('Password must be at least 6 characters long.');
+				return;
+			}
 			const response = await fetch('/register', {
 				method: 'POST',
 				headers: {
@@ -105,11 +122,10 @@
 			const data = await response.json();
 			if (response.ok) {
 				alert('User registered successfully');
-                window.location.href = '/';
+				window.location.href = '/';
 			} else {
 				alert(data.msg || 'Registeration failed');
-                window.location.href ='/';
-
+				window.location.href = '/';
 			}
 		});
 	</script>
